# snake-rust

./: Cargo.toml  deploy.sh  index.html  mfro_snake.js  mfro_snake_bg.js
src/: lib.rs  main.rs
web/: index.html
