[package]
name = "mfro-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = "thin"

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.92"

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "webgl2",
  "bevy_winit",
  "bevy_sprite",
]

# https://github.com/Amanieu/parking_lot/issues/269
[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"
